examples/errors/module_scope_error.flx
// Triggers E039 (MODULE SCOPE)
fun main() {
  module Inner {
    fun value() { 1; }
  }
}
